third attempted mobile hover fix
- attempted to fix project tab display on mobile tap, where client text
containing box is too small
- sure wish I had better testing tools

--- a/theme/manimejia/foundation-manimejia.scss
+++ b/theme/manimejia/foundation-manimejia.scss
@@ -1548,7 +1548,7 @@ $tabs-navigation-font-color: $white;
 	  .char {
 	    position: absolute;
 	    top: 0rem;
-	    height: 50%;
+	    height: $circle-radius;
 	    width: $char-width;
 	    transform-origin: bottom center;
 	    padding-top:$circle-padding;
